# academic-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_new_providers.py
src/academic_mcp/: __init__.py  __main__.py  config.py  server.py
src/academic_mcp/models/: __init__.py  paper.py
src/academic_mcp/providers/: __init__.py  base.py  base_kcisa.py  cinii.py  eyis.py  folkency.py  gugak.py  hgis.py  itkc.py  kci.py  kci_backup.py  koreantk.py  kostma.py  losi.py  munjip.py  nl.py  nrich.py  oak.py  stdict.py  tripitaka.py
src/academic_mcp/tools/: __init__.py  search.py
