[project]
name = "academic-mcp"
version = "0.1.0"
description = "한국 학술/문화유산 기관 API 통합 MCP 서버"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
academic-mcp = "academic_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/academic_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
academic_mcp = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
